--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "square": "^43.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
