--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+frontend/node_modules
+backend/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -11,14 +12,17 @@
 !.yarn/versions
 
 # testing
-/coverage
+frontend/coverage
+backend/coverage
 
-# next.js
-/.next/
-/out/
+# next.js (frontend)
+frontend/.next/
+frontend/out/
 
 # production
-/build
+frontend/build
+backend/build
+backend/dist
 
 # misc
 .DS_Store
@@ -32,10 +36,12 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+frontend/.env*
+backend/.env*
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+frontend/next-env.d.ts
