--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,16 @@
     "build": "echo 'No build step required for basic Node.js backend'"
   },
   "dependencies": {
-    "express": "^4.21.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "googleapis": "^156.0.0",
     "square": "^43.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "@types/express": "^5.0.0",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "nodemon": "^3.1.9",
     "typescript": "^5"
   }
 }
