--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.1.0",
+    "googleapis": "^156.0.0",
     "next": "15.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
