Added image and book data caching per category. Git ignore'd the cache

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 #avoiding committing from npm installing in ./
 package-lock.json
 
+#backend cache
+backend/src/lib/cache
+
 # dependencies
 frontend/node_modules
 backend/node_modules
