--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@next/third-parties": "^15.5.4",
     "@tailwindcss/line-clamp": "^0.4.4",
     "firebase": "^12.1.0",
     "googleapis": "^156.0.0",
