--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.5.4",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.5.0",
     "firebase": "^12.1.0",
