--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@pinecone-database/pinecone": "^6.1.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "firebase": "^12.1.0",
     "googleapis": "^156.0.0",
     "next": "^15.4.6",
